--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,3 +32,65 @@ header a {
   padding: 20px;
   margin: 0 auto;
 }
+.home{
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  gap: 100px;
+}
+.sport-details{
+  background-color: #fff;
+  border-radius: 4px;
+  margin: 20px auto;
+  padding: 20px;
+  position: relative;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.07);
+}
+.sport-details h4{
+  margin: 0 0 10px 0;
+  font-size: 1.2rem;
+  color: var(--primary);
+}
+.sport-details p{
+  margin: 0;
+  font-size: 0.9em;
+  color: #555;
+}
+.sport-details span{
+  position: absolute;
+  top: 70px;
+  right: 20px;
+  cursor: pointer;
+  /* background-color: #f1f1f1; */
+  background-color: crimson;
+  padding: 6px;
+  color: #333;
+  border-radius: 2rem;
+}
+label, input{
+  display: block;
+}
+input{
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  width: 100%;
+  border: 1px dotted #ddd;
+  border-radius: 10px;
+  box-sizing: border-box;
+}
+form button{
+  background-color: var(--primary);
+  border: 0;
+  color: #fff;
+  padding: 2px;
+  font-family: poppins;
+  border-radius: 7px;
+  cursor: pointer;
+}
+section.error{
+  padding: 10px;
+  background-color: #ffefef;
+  border: 2px dotted var(--error);
+  border-radius: 4px;
+  margin: 20px 0;
+}
