--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -68,8 +68,9 @@ header a {
   color: crimson;
   border-radius: 2rem;
 }
-.edit{
+.sport-details span.edit{
   margin: 2rem 0;
+  color: #1aaa01;
 }
 label, input{
   display: block;
@@ -105,3 +106,36 @@ input.error{
 input.success{
   border: 1px solid var(--success);
 }
+
+/* nav */
+nav{
+  display: flex;
+  align-items: center;
+}
+nav a{
+  margin-left: 10px;
+}
+
+nav button{
+  background-color: #f1f1f1;
+  color:  var(--primary);
+  border: 1.5px solid var(--primary);
+  margin-left: 15px;
+  padding: 5px 10px;
+  border-radius: 4px;
+  font-family: poppins;
+  cursor: pointer;
+  font-size: 1em;
+}
+
+/* auth forms styles */
+form.sign-up, form.login{
+  max-width: 400px;
+  margin: 40px auto;
+  padding: 20px;
+  background-color: #ddd;
+  border-radius: 5px;
+}
+
+
+
